# qt_press_image

./: .gitignore
1/appdesign_1/: appdesign.pro  appdesign.pro.user.21ecc47  grid_layout_panel.cpp  mainwindow.cpp  mainwindow.ui  picture_process.cpp  pinterwave.cpp  pinterwave.h
1/build-appdesign-Desktop_Qt_5_14_2_GCC_64bit-Debug/: Makefile  moc_grid_layout_panel.cpp  moc_mainwindow.cpp  moc_picture_process.cpp  moc_pinterwave.cpp  ui_mainwindow.h
111111/appdesign_4/: appdesign.pro  findpeaks.cpp  mainwindow.ui  (+2 more)
CNN_train/: data_prepare.py  ding.py  infer.py  infer1.py  infer_onnx.py  pressCNN_net.onnx  pressCNN_net.pth  show_picture.py  test_onnx.py  trainer.py  transonnx.py  txttojson.py
pressprocess/appdesign_4/: CMakeLists.txt  appdesign.pro  compile_commands.json  mysql_test.cpp.autosave
pressprocess/appdesign_4/.cache/clangd/index/: CMakeCCompilerId.c.1BC83D6F4816C20C.idx  CMakeCXXCompilerId.cpp.3D1C8617C17BCCEA.idx  audioplayer.cpp.6284166894048AD8.idx  audioplayer.h.8B121398396C6D58.idx  databaseworker.cpp.B46035856B23315B.idx  databaseworker.h.B4BD01FD88D05C9A.idx  findpeaks.cpp.E644FD94E6DC0211.idx  findpeaks.h.B1A7F442C26838A6.idx  grid_layout_panel.cpp.1C3CC511776268CC.idx  grid_layout_panel.h.F281489D0E244A64.idx  main.cpp.213CC51606578837.idx  mainwindow.cpp.E12E99128D79857F.idx  mainwindow.h.386B9572D6EB8FB3.idx  moc_audioplayer.cpp.1A377E603F5AE632.idx  moc_databaseworker.cpp.752445AC45DB0F23.idx  moc_findpeaks.cpp.A9C0173C654F520F.idx  moc_grid_layout_panel.cpp.388DB4795F11D3F5.idx  moc_mainwindow.cpp.EDA5378648D4D428.idx  moc_mysql_test.cpp.9FB9484AEEDB4606.idx  moc_packet_transmission.cpp.4C1A2A3BF82D263C.idx  moc_picture_process.cpp.B8682BB74AE19326.idx  moc_pinterwave.cpp.A9487EE482D7B962.idx  moc_pinterwave1.cpp.43BB9E313AEF4D5C.idx  moc_presssensor.cpp.DC867217FB5B9434.idx  moc_worker.cpp.E81C2A6F61DDCF5B.idx  msp_cmn.h.0060E45B0E271A68.idx  msp_errors.h.ACF457423D02254B.idx  msp_types.h.4F1064965DF39F3F.idx  mysql_test.cpp.129298DAD9AB4F87.idx  mysql_test.h.6BFD10B30CC257E1.idx  packet_transmission.cpp.24EDA19B5436BEE6.idx  packet_transmission.h.01406D6986F22AFA.idx  picture_process.cpp.4E5B4EA65C8E4409.idx  picture_process.h.905A29498B900EC4.idx  pinterwave.cpp.DD6F28215A1AAC6E.idx  pinterwave.h.95B9B89FCC9776C8.idx  pinterwave1.cpp.6333A2D7B1C08E41.idx  pinterwave1.h.9FCB592F00B45728.idx  presssensor.cpp.A52183582943FB9B.idx  presssensor.h.9F814D9F8D595826.idx  (+4 more)
pressprocess/appdesign_4/forms/: mainwindow.ui
pressprocess/appdesign_4/include/: audioplayer.h  databaseworker.h  mainwindow.h  mysql_test.h  pinterwave.h  pinterwave1.h  presssensor.h  worker.h
pressprocess/appdesign_4/opencv-3.4.14/lib/: libopencv_bioinspired.so.3.4.14  libopencv_hfs.so.3.4.14  libopencv_highgui.so.3.4.14  libopencv_phase_unwrapping.so.3.4.14  libopencv_photo.so.3.4.14  libopencv_xfeatures2d.so.3.4.14
pressprocess/appdesign_4/opencv-3.4.14/share/OpenCV/: OpenCVModules.cmake
pressprocess/appdesign_4/src/: audioplayer.cpp  databaseworker.cpp  grid_layout_panel.cpp  mainwindow.cpp  mysql_test.cpp  packet_transmission.cpp  pinterwave.cpp  pinterwave1.cpp  presssensor.cpp  worker.cpp
(+115 files in other folders)
